# GTClaude

./: .gitignore  GTCLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-25-gtclaude-s0.md
docs/superpowers/specs/: 2026-06-25-gtclaude-design.md
src/gt_claude/cli/: __main__.py  main.py
src/gt_claude/cli/commands/: ping.py  version.py
src/gt_claude/core/: app.py  config.py  logging_setup.py
src/gt_claude/core/bus/: commands.py  envelope.py  events.py
src/gt_claude/core/transport/: socket_client.py  socket_server.py
tests/unit/: test_cli.py  test_commands.py  test_config.py  test_core_app.py  test_envelope.py  test_events.py  test_logging_setup.py  test_socket_client.py  test_socket_server.py
