[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GTClaude"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
gt = "gt_claude.cli.main:main"
gt-core = "gt_claude.core.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/gt_claude"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
